[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sim-plugin-newton"
version = "0.1.0"
description = "Newton driver for sim (v1: one-shot subprocess)."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Weiqi Ji", email = "jiweiqi10@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "sim-runtime @ git+https://github.com/svd-ai-lab/sim-cli@v0.2.4",
    # TODO(reviewer): pin the newton SDK here, e.g. "newton>=X.Y"
]

[project.optional-dependencies]
test = [
    "pytest>=7",
    "build>=1.0",
]

[project.entry-points."sim.drivers"]
newton = "sim_plugin_newton:NewtonDriver"

[project.entry-points."sim.skills"]
newton = "sim_plugin_newton:skills_dir"

[project.entry-points."sim.plugins"]
newton = "sim_plugin_newton:plugin_info"

[project.urls]
Homepage = "https://github.com/svd-ai-lab/sim-plugin-newton"
Issues = "https://github.com/svd-ai-lab/sim-plugin-newton/issues"

[tool.hatch.metadata]
# Required because `sim-runtime` is pinned to a git+https URL — sim-cli is
# distributed via GitHub, not PyPI. See sim-proj memory: plugin distribution
# is GitHub-only.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sim_plugin_newton"]
